Aug 06, 2024
  renamed 'master' branch to 'main'

Feb 22, 2024
  gene loader: fixed handling of nomenclature events

Nov 10, 2023
  gene loader: alternate assembly names are provided in config

Oct 31, 2023
  gene loader: nomenclature events are no longer generated for genes having NOMEN_SOURCE='MGI'
    Note: The problem was that mgi-nomenclature-pipeline was renaming Ensembl genes, setting NOMEN_SOURCE='MGI',
          and then ensembl-gene-pipeline was renaming them to Ensembl nomenclature, setting NOMEN_SOURCE='Ensembl';
          that resulted in endless circle of gene renaming for some mouse genes.
          Since MGI is the primary nomenclature source, it must trump any other gene name sources.

May 09, 2023
  gene loader: code cleanup

Apr 03, 2023
  removed Harika from email list -- Harika is no longer with RGD

Feb 27, 2023
  renamed distro to 'ensembl-data-pipeline'

Feb 21, 2023
  fixed names of downloaded transcript files (no more spaces in file name)

Feb 20, 2023
  better logging

Jan 26, 2023
  updated build.gradle to be gradle 6.x + compatible

Jan 10, 2023
  removed Harika from email recipients

Oct 07, 2022
  loader: added species SpeTri2.0 (squirrel) to the list of supported species
  loader: added matching of incoming Ensembl genes to existing NCBI genes by position

Jun 01, 2022
  genes: added logging and summary reporting of inserted genes

May 25, 2022
  aliases: prefix 'LOW QUALITY PROTEIN:' is removed if present

May 23, 2022
  improved logging of conflicts

May 20, 2022
  implemented updates of Ensembl gene type
  added loading for naked mole-rat assembly HetGla_female_1.0

May 13, 2022
  improved QC reporting

May 11, 2022
  better code to match by NCBI gene ids

May 10, 2022
  tuned up logging

2022-03-07
  updated dependencies

2022-01-04
  updated log4j to avoid zero day exploit
  updated dog and rat: new assemblies ROS_Cfam_1.0 and mRatBN7.2

2021-08-31
  gff3 transcript loader: improved parsing nad loading code